feat: add docker build
